Implementeret privat statisk liste med to kunder i listen. Implemenetret en metode i handleren som henter alle kunder på listen. Testet metode GetCustomers og prop Id. 91 % af koden er testet.

--- a/RestWCFCustomer/Web.config
+++ b/RestWCFCustomer/Web.config
@@ -22,7 +22,7 @@
       <serviceBehaviors>
 
         <behavior name="ServiceBehavior">
-          <serviceMetadata httpGetEnabled="false"/>
+          <serviceMetadata httpGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="true"/>
         </behavior>
 
