--- a/RestWCFCustomer/Web.config
+++ b/RestWCFCustomer/Web.config
@@ -11,9 +11,9 @@
   <system.serviceModel>
 
     <services>
-      <service name="RestWCFCustomer.Service1" behaviorConfiguration="ServiceBehavior">
-        <endpoint address="" binding="webHttpBinding"
-        contract="RestWCFCustomer.ICostumer" behaviorConfiguration="webHttp"/>
+      <service behaviorConfiguration="ServiceBehavior" name="RestWCFCustomer.Service1">
+        <endpoint address="" behaviorConfiguration="webHttp" binding="webHttpBinding"
+          contract="RestWCFCustomer.ICustomer" />
       </service>
     </services>
 
